# docs-site/docs/api/openapi/v1.json
@@ -29,6 +29,51 @@
         }
       }
     },
+    "/api/v1/org/members/{uid}/password-reset": {
+      "post": {
+        "tags": [
+          "Org"
+        ],
+        "parameters": [
+          {
+            "name": "uid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/auth/password-reset:complete": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CompleteRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/documents:import": {
       "post": {
         "tags": [
@@ -2161,6 +2206,27 @@
           }
         }
       },
+      "CompleteRequest": {
+        "required": [
+          "token",
+          "password"
+        ],
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
+          "password": {
+            "type": [
+              "null",
+              "string"
+            ]
+          }
+        }
+      },
       "CreateCopyRequest": {
         "required": [
           "name"
@@ -2553,6 +2619,12 @@
       "name": "EasyDocs.Api"
     },
     {
+      "name": "Org"
+    },
+    {
+      "name": "Auth"
+    },
+    {
       "name": "Documents"
     },
     {
@@ -2565,16 +2637,10 @@
       "name": "Editing"
     },
     {
-      "name": "Auth"
-    },
-    {
       "name": "MFA"
     },
     {
       "name": "SSO"
-    },
-    {
-      "name": "Org"
     },
     {
       "name": "Tokens"
